修正倒计时错误，修正状态接受错误，处理异常状态

--- a/popup.html
+++ b/popup.html
@@ -24,8 +24,8 @@
                 </span>
             </div>
             <div>
-                <span>
-                    开始后会进行统计，页面会刷新是正常现象
+                <span id="result">
+                    开始后会进行统计，结果会在这里显示
                 </span>
             </div>
             <br>
